--- a/assets/style.css
+++ b/assets/style.css
@@ -24,113 +24,51 @@ body {
   color:#00088E;
 }
 
-h1 {
-  color:#EDEFEB;
-  font-family: ui-monospace;
-}
-
-h3 {
-  margin-block-start:0.3em;
-  font-size: smaller;
-}
-
-h4 {
-  margin-block-end:0.3em;
-  font-size: smaller;
-}
-
-.text{
-  margin: 10px;
-  padding: 25px;
-  align-self: center;
-}
-
-.row{
-  display: flex;
-}
-
-/* Boxes */
-
 .box {
-  border-radius: 10px;
-  background-color: #f9f9f8;
+  border-radius: 5px;
+  background-color: #f9f9f9;
   margin: 10px;
-  padding: 25px;
-  box-shadow: 2px 2px 2px #00088E;
-}
-
-.box_comment {
-  border-radius: 20px;
-  background-color: #d4f5c29a;
-  margin: 10px;
-  padding: 10px;
+  padding: 15px;
   box-shadow: 2px 2px 2px lightgrey;
-  font-size: small;
+}
+
+h1, h2, h3, h4, h5, h6 {
   text-align: center;
-  font-family: system-ui;
+  background-color: #f9f9f9;
 }
 
-.box_emissions{
-  border-radius: 20px;
-  background-color: #e9a8538e;    
-  margin: 2px;
-  box-shadow: 2px 2px 2px lightgrey;
-  justify-content: center;
-  width: 50%;
+.examples {
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    width: 80%;
+    height: 100%;
+}
+
+button {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #555;
   text-align: center;
-}
-/* Drop down */
-#drop_map .VirtualizedSelectFocusedOption {
-  background-color:#ebb36abf;
-}
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: #f9f9f9;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box;
+  margin-left: 70px;
+  }
 
-#drop_continent .VirtualizedSelectFocusedOption {
-  background-color:#ebb36abf;
-}
-
-/* Radio buttons */
-.radio {
-  display:flex;
-  justify-content: left;
-  place-content:space-around;
-  width: 88%;
-}
-
-.radio input[type="radio"] {
-  opacity: 0;
-  position: absolute;
-}
-
-.radio label {
-  display: table-caption;
-  background-color: #F9F9F8;
-  padding: 15px 15px;
-  font-size: 16px;
-  border: 2px solid #e9a8538e;
-  border-radius: 10px;
-  width: 200%;
-  text-align: center;
-}
-
-.radio input[type="radio"]:checked + label {
-  background-color: #e98b1044;              
-  border: 2px solid #F9F9F8;
-}
-
-.radio label:hover {
-  background-color: #e1e2df;
-  border: 2px solid #e1e2df;
-}
-
-/* Scrollbars */
-*::-webkit-scrollbar {
-  width: 12px;               
-}
-*::-webkit-scrollbar-track {
-  background: #EDEFEB;        
-}
-*::-webkit-scrollbar-thumb {
-  background-color:#ebb36abf;    
-  border-radius: 20px;      
-  border: 3px solid #EDEFEB;  
+@media (max-width: 900px) {
+  .row {
+    display: block;
+  }
 }
